# W03_duckdb_dbt

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
data/parquet/: api-reponse-compra2023-12-17T09_59_15.parquet  api-reponse-compra2023-12-17T10_00_16.parquet  api-reponse-compra2023-12-17T10_01_18.parquet
dbt_project_03/: .user.yml  dbt_project.yml  profiles.yml
dbt_project_03/models/: sources.yml
dbt_project_03/models/fct/: fct_vendas.sql  fct_vendas.yml
dbt_project_03/models/gold/: gold_transactions.sql
dbt_project_03/models/kpis/: maior_venda.sql
dbt_project_03/models/src/: src_transactions.sql
dbt_project_03/seeds/: products.yml
dbtcore/: index.html
docs/: dbtcore.md  duckdb.md  index.md
duckdb/: index.html
search/: search_index.json
sql/: 01_hello_world.sql  02_hello_world_persistido.sql  03_trabalhando_com_csv.sql  04_trabalhando_com_multiplos_csv.sql  05_salvando_em_parquet.sql  06_convertendo_multiplos_arquivos.py  07_trabalhando_com_csv_e_parquet.sql  08_alterando_o_schema copy.sql  08_alterando_o_schema.sql  09_acessando_aws copy.sql  09_acessando_aws.sql
