[tool.poetry]
name = "workshop03-duckdb-dbt"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "workshop03_duckdb_dbt"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
