[tool.poetry]
name = "workshop03-duckdb-dbt"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "workshop03_duckdb_dbt"}]

[tool.poetry.dependencies]
python = "3.11.5"
pre-commit = "^3.6.0"
duckdb = "^0.9.2"
dbt-duckdb = "^1.7.0"
pyarrow = "^14.0.2"
boto3 = "^1.34.18"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
